Minor code cleanup, use only Java 8 features